Fix review issues: snapshot semantics, shared codec, targeted send test
- Return snapshot copies (List.copyOf/Set.copyOf) from JsonRPCSessions
  instead of live views to avoid surprising concurrent mutation
- Extract JsonRPCCodec as a shared synthetic bean so Router and
  Broadcaster share one instance instead of each copying the ObjectMapper
- Add testSendToKnownSession verifying targeted send delivers only to
  the specified session

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>